--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       // Y2M0OTUyMzMtMjFlMS00ODE3LWI1ZDctYmEyZGIxNWYyOGQz driver test 
       // ODgyODJjMjktZjc1ZC00YjY4LThhMGUtODgyYzhkN2I4NWY4 group pma test MjgwMDhmNTMtNmI4OS00MTVhLWIwNzEtOWMzNDZhMDYyMjMy
       const widgetService = new WidgetService({
-        apiKey: 'ZmJiZGE2YWItMmYzZC00Mjg1LTgyZGEtYzBkYjg1Mjk1MjJm',
+        apiKey: 'OWY0MzM2YWEtNjc5Ny00YzYxLTg5MDgtYTUxMDdjOGNjYTc0',
         topMenu: {
           options: []
         },
@@ -77,7 +77,7 @@
       
       // 1ab28643-875e-4be0-84db-be78262c330f alexander-8 driver:305758-test operator:1149 driver:317119
       widgetService.connect({
-        id: 'driver:305758-test',
+        // id: 'driver:305758-test',
         // names: "Driver-4"
         // name: "Ed Sheeran"
         // name: "Shipper 3",// id: 'driver:305758-test', // operator:123 driver:370429
